Label sample column correctly and re-align columns.

--- a/app/react/App/scss/modules/_cockpit.scss
+++ b/app/react/App/scss/modules/_cockpit.scss
@@ -22,15 +22,15 @@
   }
 
   thead th:nth-child(1) {
-    width: 50%;
+    width: 70%;
   }
 
   thead th:nth-child(2) {
-    width: 20%;
+    width: 10%;
   }
 
   thead th:nth-child(3) {
-    width: 20%;
+    width: 10%;
   }
 
   thead th:nth-child(4) {
